--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Incompleto – Surf club</title>
     <meta name="description" content="Incompleto's bot arena">
-    <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
