--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Incompleto – Surf club</title>
-    <meta name="description" content="Incompleto's bot arena">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/style.css">
+    <title>Incompleto – Surferbot</title>
+    <meta name="description" content="Telegram bot for the Surf Club event" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/style.css" />
     <script src="/client.js" defer></script>
   </head>
   <body>
