--- a/public/style.css
+++ b/public/style.css
@@ -5,13 +5,11 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 0;
   padding: 0;
   background: #f8d946;
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: "IBM Plex Sans", -apple-system, sans-serif;
   font-weight: 300;
-  
   font-weight: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -20,7 +18,7 @@ body {
 }
 
 body.is-shaking {
-  animation: shake .9s cubic-bezier(.36,.07,.19,.97) both;
+  animation: shake 0.9s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
   perspective: 1000px;
@@ -38,7 +36,8 @@ body.is-shaking {
 .Link {
   font-size: 1.8em;
   opacity: 0;
-  transition: margin 250ms ease-in-out, height 250ms ease-in-out, opacity 800ms ease-in-out;
+  transition: margin 250ms ease-in-out, height 250ms ease-in-out,
+    opacity 800ms ease-in-out;
 }
 .Link__title {
   font-weight: 500;
@@ -47,7 +46,7 @@ body.is-shaking {
 .Link__username {
   font-weight: 300;
   font-size: 0.8em;
-  opacity: 0.3;
+  opacity: 0.5;
 }
 .Link__description {
   font-weight: 300;
@@ -70,19 +69,19 @@ body.is-shaking {
   position: absolute;
   right: 24px;
   top: 24px;
-  
+
   border-top: 3px solid rgba(255, 255, 255, 0.5);
   border-right: 3px solid rgba(255, 255, 255, 0.5);
   border-bottom: 3px solid rgba(255, 255, 255, 0.5);
   border-left: 3px solid #fff;
   animation: spin 0.8s infinite linear;
-  
+
   opacity: 0;
   visibility: hidden;
   transition: all 250ms ease-in-out;
 }
 
-.Spinner, 
+.Spinner,
 .Spinner:after {
   border-radius: 50%;
 }
@@ -91,7 +90,6 @@ body.is-shaking {
   opacity: 1;
   visibility: visible;
 }
-
 
 @keyframes spin {
   0% {
@@ -103,24 +101,29 @@ body.is-shaking {
 }
 
 @keyframes shake {
-  10%, 90% {
+  10%,
+  90% {
     transform: translate3d(-1px, 0, 0);
   }
-  
-  20%, 80% {
+
+  20%,
+  80% {
     transform: translate3d(2px, 0, 0);
   }
 
-  30%, 50%, 70% {
+  30%,
+  50%,
+  70% {
     transform: translate3d(-8px, 0, 0);
   }
 
-  40%, 60% {
+  40%,
+  60% {
     transform: translate3d(8px, 0, 0);
   }
 }
 
-@media only screen and (max-width: 640px) { 
+@media only screen and (max-width: 640px) {
   .Content {
     width: 100%;
     padding: 30px;
