--- a/views/index.html
+++ b/views/index.html
@@ -14,4 +14,10 @@
     <div class="Spinner"></div>
     <div class="Content js-content"></div>
   </body>
+
+  <script type="text/javascript">
+    setTimeout(function() {
+      window.location.reload(1);
+    }, 3000);
+  </script>
 </html>
