Try to change the timeout

--- a/views/index.html
+++ b/views/index.html
@@ -16,8 +16,8 @@
   </body>
 
   <script type="text/javascript">
-    setTimeout(function() {
-      window.location.reload(1);
-    }, 59000);
+    // setTimeout(function() {
+    //   window.location.reload(1);
+    // }, 59000);
   </script>
 </html>
